--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang='en'>
   <head>
+    <title>things to learn for wandererr</title>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
   </head>
   <body>
-
+    <h1>Hello, Code School!</h1>
+  <ul>
+      <li>become expert at JS design patterns</li>
+      <li>become expert at JS unit testing</li>
+  </ul>
   </body>
 </html>
